[package]
name = "chapter_02"
authors = ["Jonas Zaddach <jonas.zaddach@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk = "0.3.1"
wdk-alloc = "0.3.1"
wdk-panic = "0.3.1"
wdk-sys = "0.4.0"

[build-dependencies]
wdk-build = "0.4.0"

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

