[package]
name = "beep"
version = "0.1.0"
edition = "2024"

[dependencies.windows]
version = "0.62.2"
features = [
	"Win32_Foundation",
	"Win32_System_Threading",
	"Win32_System_IO",
	"Win32_System_WindowsProgramming",
	"Win32_System_SystemServices",
	"Win32_Security",
    "Win32_Devices_Beep",
	"Wdk_Foundation",
	"Wdk_Storage_FileSystem",
]
