[package]
name = "boost"
version = "0.1.0"
edition = "2024"

[dependencies]
booster-common = { path = "../booster-common" }
windows-strings = "0.5.1"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]
