[package]
name = "zero-common"
version = "0.1.0"
edition = "2024"

[features]
kernel = ["dep:wdk-sys"]
user = ["dep:windows"]

[dependencies]
windows-driver-common-util = {path = "../../windows-driver-common-util"}

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_System_Ioctl",
]
optional = true

[dependencies.wdk-sys]
version = "0.4.0"
optional = true